--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,11 @@
   margin:0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  background: linear-gradient(120deg,#2980b9,#8e44ad);
 
+}
+.error{
+  background: none;
 }
 
 ul li {
@@ -12,6 +16,7 @@ ul li {
 li a{
    text-decoration:none;
    font-size: 16px;
+ 
    
 }
 
@@ -22,22 +27,29 @@ li a{
   justify-content: space-around;
   padding: 5px 5px;
   height: 80px;
-  background-color: salmon;
+
 }
+label{
+   background: none;
+}
+
 .nav-logo{
   padding: 10px 10px;
   text-decoration: none;
-  color: blue;
+  color: white;
   font-size: 30px;
+  background: none;
 }
 .nav-item a{
   color: white;
+  background: none;
 }
 
 .nav-item{
   margin-left:25px;
   padding:10px;
   text-decoration: none;
+  background:none;
 
   
    
@@ -45,6 +57,7 @@ li a{
 .nav-menu{
   display: flex;
   justify-content: space-between;
+ background: none;
   align-items: center;
 }
 .nav-link a{
@@ -54,9 +67,8 @@ li a{
   margin-left: auto;
   padding: 15px;
   font-size: 16px;
-  color: rgb(0, 21, 255);
-  background-color: blue;
-  color:white;
+  color: white;
+  background: none;
   border-radius: 5px;
  cursor: pointer;
 }
@@ -68,6 +80,7 @@ li a{
   transition: 0.3s ease-in-out;
   
 }
+
 
 .hamburger{
   display: none;
@@ -82,7 +95,8 @@ li a{
  display:block;
  height: 3px;
  width:25px;
- background-color: black;
+ background:none;
+ color:white;
  margin: 5px;
  
 
@@ -91,7 +105,7 @@ li a{
  display:block;
  height: 3px;
  width:25px;
- background-color: black;
+ background:none;
  margin: 5px;
  cursor:pointer;
  
@@ -132,14 +146,15 @@ p>a{
 /* Login styles */
 .loginbox{
  position: absolute;
-background-color: rgb(218, 181, 213);
+   background: none;
+background-color:white;
 padding: 35px 45px 50px 50px ; 
 height: 500px;
   width:500px;
 top: 60%;
 left: 50%;
 transform: translate(-50%,-50%);
-  border-radius: 10%;
+  border-radius: 10px;
 overflow: hidden;
 box-sizing: border-box;
 z-index: 2;
@@ -152,6 +167,7 @@ font-size: xx-large;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-weight: bold;
   margin-bottom: 55px;
+  background: none;
 
 }
 .loginbox input{
@@ -163,8 +179,8 @@ margin-bottom: 20px;
 
 .loginbox input[type="text"],input[type="Password"]{
 border: 1px solid black;
-border-radius: 25px;
-background:rgb(208, 194, 194);
+border-radius: 5px;
+background:whitesmoke;
 outline:none;
 height:45px;
 padding: 20px 15px;
@@ -172,12 +188,24 @@ color: black;
 font-size: 15px;
 
 }
+ul li {
+  list-style: none;
+ 
+}
+li a{
+   text-decoration:none;
+   font-size: 16px;
+ 
+   
+}
 .signup{
   text-decoration: underline;
   color:blue;
+  background:none;
 }
 .signup:visited{
   text-decoration: underline;
+  background: none;
   color: blue;
 }
 
@@ -190,7 +218,7 @@ background: blue;
 color:White;
 font-size: 18px;
 cursor: pointer;
-border-radius: 25px;
+border-radius:5px;
 left: 25%;
 transition:0.5s;
 position:absolute;
@@ -203,7 +231,7 @@ width: 250px;
 
 }
 ::placeholder{
-color: rgba(12, 11, 11, 0.211);
+color: rgba(12, 11, 11, 0.299);
 margin-bottom: 2px;
 
 }
@@ -212,22 +240,50 @@ margin-bottom: 2px;
   .hamburger{
       display: block;
       cursor: pointer;
+      background: none;
   }
+  .bar{
+ display:block;
+ height: 3px;
+ width:25px;
+ background:white;
+ margin: 5px;
+ 
+
+}
+
+.bar:hover{
+ display:block;
+ height: 3px;
+ width:25px;
+ background:white;
+ margin: 5px;
+ cursor:pointer;
+ 
+
+}
+.nav-logo{
+  
+  color: white;
+  font-size: 20px;
+ 
+}
   .loginbox{
  position: absolute;
-background-color: rgb(218, 181, 213);
+background: white;
 padding: 35px 45px 50px 50px ; 
 height: fit-content;
   width:fit-content;
 top: 60%;
 left: 50%;
 transform: translate(-50%,-50%);
-  border-radius: 10%;
+  border:1px solid black;
+  border-radius: 5px;
 overflow: hidden;
 box-sizing: border-box;
 z-index: 2;
 flex-direction: column;
-  margin: 0px 5px 5px 0px;
+  margin: 0px 20px 5px 0px;
 
 }
 .btn{
@@ -239,7 +295,7 @@ background: blue;
 color:White;
 font-size: 18px;
 cursor: pointer;
-border-radius: 25px;
+border-radius: 5px;
 left: 25%;
 transition:0.5s;
 position:absolute;
@@ -252,9 +308,9 @@ width: 200px;
 
 }
   .loginbox input{
-width: 56.5%;
+width: 64%;
 margin-bottom: 20px;
-  margin-left:50px
+  margin-left:35px
   
 }
   .nav-menu{
@@ -262,12 +318,12 @@ margin-bottom: 20px;
       top:-110%;
       margin-top:15%;
       flex-direction: column;
-      background-color:salmon;
       color:white;
       width: 100%;
       text-align: center;
       transition: 0.7s ease-in-out;
       z-index: 10000;
+      background:linear-gradient(120deg,#2980b9,#8e44ad);;
       
   }
 
@@ -280,6 +336,7 @@ margin-bottom: 20px;
       border-bottom: 1px solid white;
       width:120%;
       padding-bottom:20px;
+
        
   }
 
@@ -299,3 +356,4 @@ margin-bottom: 20px;
       
   }
 }
+
