--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -12,11 +12,15 @@ Premium: http://www.gridgum.com
 /* BASIC THEME CONFIGURATION */
 body {
     color: #797979;
-	background: #f2f2f2;
+	/* background: #f2f2f2; */
     font-family: 'Ruda', sans-serif;
     padding: 0px !important;
     margin: 0px !important;
     font-size:13px;
+    background: #E0EAFC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
 
 ul li {
@@ -217,6 +221,13 @@ ul.top-menu > li > .logout {
 	margin-top: 15px;
 }
 
+input.logout{
+    width: 100% !important;
+    border-radius: 5px;
+    background-color: red;
+    color: whitesmoke;
+}
+
 
 
 /*sidebar navigation*/
@@ -225,7 +236,14 @@ ul.top-menu > li > .logout {
     width: 210px;
     height: 100%;
     position: fixed;
-    background: #B59595;
+   
+    
+    filter: brightness(90%) drop-shadow(2px 4px 6px black) ;
+}
+#sidebar:hover{
+    filter: brightness(100%) drop-shadow(2px 4px 6px black) ;
+    
+
 }
 
 #sidebar h5 {
@@ -406,7 +424,10 @@ ul.sidebar-menu li a.active i {
 }
 
 .black-bg {
-    background: #B59595;
+    background: #ADA996;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     border-bottom: 2px solid #c9aa5f;
 }
 
@@ -430,6 +451,7 @@ a.logo {
 
 a.logo b {
     font-weight: 900;
+    color: chocolate;
 }
 
 a.logo:hover, a.logo:focus {
@@ -2215,6 +2237,9 @@ label {
     background: #68dff0;
     color: #fff;
     padding: 10px 0;
+    
+    width: 100%;
+    bottom: 0%;
 }
 
 
