--- a/student/assets/css/style2.css
+++ b/student/assets/css/style2.css
@@ -4621,7 +4621,7 @@
     margin-right: 15px;
     padding: 2px 18px;
     border-radius: 4px;
-    background-color: #ff9d00;
+    background-color: #ff0000;
     color: #ffffff;
     font-size: 10px;
     text-transform: uppercase;
