--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -992,9 +992,10 @@ body {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
-  background: #d9a7c7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* background: #d9a7c7; 
+background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7); 
+background: linear-gradient(to right, #fffcdc, #d9a7c7);  */
+background-color: #d6e4f0;
 
 }
 h1,
@@ -1236,7 +1237,7 @@ button .btn-success{
   background-color: green;
 }
 .header--blue {
-  background-color: rgba(8, 100, 240, 0.76);
+  background-color: #db3056;
 }
 .header--top {
   position: absolute;
