--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -108,13 +108,71 @@
   margin-left: -15px;
   margin-right: -15px;
 }
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+.col-xs-1,
+.col-sm-1,
+.col-md-1,
+.col-lg-1,
+.col-xs-2,
+.col-sm-2,
+.col-md-2,
+.col-lg-2,
+.col-xs-3,
+.col-sm-3,
+.col-md-3,
+.col-lg-3,
+.col-xs-4,
+.col-sm-4,
+.col-md-4,
+.col-lg-4,
+.col-xs-5,
+.col-sm-5,
+.col-md-5,
+.col-lg-5,
+.col-xs-6,
+.col-sm-6,
+.col-md-6,
+.col-lg-6,
+.col-xs-7,
+.col-sm-7,
+.col-md-7,
+.col-lg-7,
+.col-xs-8,
+.col-sm-8,
+.col-md-8,
+.col-lg-8,
+.col-xs-9,
+.col-sm-9,
+.col-md-9,
+.col-lg-9,
+.col-xs-10,
+.col-sm-10,
+.col-md-10,
+.col-lg-10,
+.col-xs-11,
+.col-sm-11,
+.col-md-11,
+.col-lg-11,
+.col-xs-12,
+.col-sm-12,
+.col-md-12,
+.col-lg-12 {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
 }
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+.col-xs-1,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12 {
   float: left;
 }
 .col-xs-12 {
@@ -271,7 +329,18 @@
   margin-left: 0%;
 }
 @media (min-width: 768px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+  .col-sm-1,
+  .col-sm-2,
+  .col-sm-3,
+  .col-sm-4,
+  .col-sm-5,
+  .col-sm-6,
+  .col-sm-7,
+  .col-sm-8,
+  .col-sm-9,
+  .col-sm-10,
+  .col-sm-11,
+  .col-sm-12 {
     float: left;
   }
   .col-sm-12 {
@@ -429,7 +498,18 @@
   }
 }
 @media (min-width: 992px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  .col-md-1,
+  .col-md-2,
+  .col-md-3,
+  .col-md-4,
+  .col-md-5,
+  .col-md-6,
+  .col-md-7,
+  .col-md-8,
+  .col-md-9,
+  .col-md-10,
+  .col-md-11,
+  .col-md-12 {
     float: left;
   }
   .col-md-12 {
@@ -587,7 +667,18 @@
   }
 }
 @media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-lg-1,
+  .col-lg-2,
+  .col-lg-3,
+  .col-lg-4,
+  .col-lg-5,
+  .col-lg-6,
+  .col-lg-7,
+  .col-lg-8,
+  .col-lg-9,
+  .col-lg-10,
+  .col-lg-11,
+  .col-lg-12 {
     float: left;
   }
   .col-lg-12 {
@@ -920,21 +1011,21 @@ select {
   border-radius: 0 !important;
   -webkit-border-radius: 0 !important;
 }
-[type=color],
-[type=date],
-[type=datetime],
-[type=datetime-local],
-[type=email],
-[type=month],
-[type=number],
-[type=password],
-[type=search],
-[type=tel],
-[type=text],
-[type=url],
-[type=week],
-[type=time],
-[type=submit],
+[type="color"],
+[type="date"],
+[type="datetime"],
+[type="datetime-local"],
+[type="email"],
+[type="month"],
+[type="number"],
+[type="password"],
+[type="search"],
+[type="tel"],
+[type="text"],
+[type="url"],
+[type="week"],
+[type="time"],
+[type="submit"],
 select,
 textarea {
   -webkit-appearance: none;
@@ -946,7 +1037,7 @@ textarea {
   border: 1px solid transparent;
   padding: 10px 15px;
   border-radius: 4px;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 14px;
 }
 input:focus,
@@ -956,7 +1047,7 @@ textarea:focus {
 input::placeholder,
 textarea::placeholder {
   color: #666666;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 14px;
 }
 .row {
@@ -989,14 +1080,13 @@ textarea::placeholder {
 /* 3.2. Typography
 ***********************/
 body {
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
   /* background: #d9a7c7; 
 background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7); 
 background: linear-gradient(to right, #fffcdc, #d9a7c7);  */
-background-color: #d6e4f0;
-
+  background-color: #d6e4f0;
 }
 h1,
 h2,
@@ -1004,7 +1094,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   color: #333333;
   font-weight: 700;
   line-height: 1;
@@ -1127,7 +1217,7 @@ sup {
   bottom: 1ex;
 }
 sub {
-  top: .5ex;
+  top: 0.5ex;
 }
 small {
   font-size: 75%;
@@ -1233,7 +1323,7 @@ textarea {
 ***********************/
 /* 4.1. Header / .header
 ***********************/
-button .btn-success{
+button .btn-success {
   background-color: green;
 }
 .header--blue {
@@ -1778,7 +1868,7 @@ button .btn-success{
 /* 4.3. Section / .section__header
 ***********************/
 .section__header {
-  background-image: url('../images/uploads/section_header.png');
+  background-image: url("../images/uploads/section_header.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -2280,25 +2370,25 @@ button .btn-success{
   transition: 0.3s all ease-out;
 }
 .new-listing__bg--new-york-1 {
-  background-image: url('../images/uploads/new_york_1.jpg');
+  background-image: url("../images/uploads/new_york_1.jpg");
 }
 .new-listing__bg--ohio-1 {
-  background-image: url('../images/uploads/ohio_1.jpg');
+  background-image: url("../images/uploads/ohio_1.jpg");
 }
 .new-listing__bg--san-diego-1 {
-  background-image: url('../images/uploads/san_diego_1.jpg');
+  background-image: url("../images/uploads/san_diego_1.jpg");
 }
 .new-listing__bg--new-jersey-1 {
-  background-image: url('../images/uploads/new_jersey_1.jpg');
+  background-image: url("../images/uploads/new_jersey_1.jpg");
 }
 .new-listing__bg--new-york-2 {
-  background-image: url('../images/uploads/new_york_2.jpg');
+  background-image: url("../images/uploads/new_york_2.jpg");
 }
 .new-listing__bg--san-diego-2 {
-  background-image: url('../images/uploads/san_diego_2.jpg');
+  background-image: url("../images/uploads/san_diego_2.jpg");
 }
 .new-listing__bg--new-jersey-2 {
-  background-image: url('../images/uploads/new_jersey_2.jpg');
+  background-image: url("../images/uploads/new_jersey_2.jpg");
 }
 .new-listing--large:before {
   display: block;
@@ -2367,7 +2457,7 @@ button .btn-success{
 /* 4.12. Features / .features
 ***********************/
 .features {
-  background-image: url('../images/uploads/features_bg.png');
+  background-image: url("../images/uploads/features_bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -2584,11 +2674,36 @@ button .btn-success{
   padding: 8px 25px;
 }
 .listing__content--bg {
-  background: -webkit-linear-gradient(90deg, #050606 0%, rgba(5, 6, 6, 0.99) 1%, rgba(0, 0, 0, 0) 100%);
-  background: -moz-linear-gradient(90deg, #050606 0%, rgba(5, 6, 6, 0.99) 1%, rgba(0, 0, 0, 0) 100%);
-  background: -o-linear-gradient(90deg, #050606 0%, rgba(5, 6, 6, 0.99) 1%, rgba(0, 0, 0, 0) 100%);
-  background: -ms-linear-gradient(90deg, #050606 0%, rgba(5, 6, 6, 0.99) 1%, rgba(0, 0, 0, 0) 100%);
-  background: linear-gradient(0deg, #050606 0%, rgba(5, 6, 6, 0.99) 1%, rgba(0, 0, 0, 0) 100%);
+  background: -webkit-linear-gradient(
+    90deg,
+    #050606 0%,
+    rgba(5, 6, 6, 0.99) 1%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background: -moz-linear-gradient(
+    90deg,
+    #050606 0%,
+    rgba(5, 6, 6, 0.99) 1%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background: -o-linear-gradient(
+    90deg,
+    #050606 0%,
+    rgba(5, 6, 6, 0.99) 1%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background: -ms-linear-gradient(
+    90deg,
+    #050606 0%,
+    rgba(5, 6, 6, 0.99) 1%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background: linear-gradient(
+    0deg,
+    #050606 0%,
+    rgba(5, 6, 6, 0.99) 1%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 .listing__content--less-b-padding {
   padding-bottom: 5px;
@@ -2746,7 +2861,7 @@ button .btn-success{
   display: inline-block;
   margin-bottom: 5px;
   color: #333333;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 15px;
   font-weight: 700;
 }
@@ -2841,7 +2956,7 @@ button .btn-success{
   background-color: #1fc341;
   color: #ffffff;
   border-radius: 4px;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 500;
   text-transform: uppercase;
   text-align: center;
@@ -3083,7 +3198,7 @@ button .btn-success{
 }
 .testimonial__list .slick-slide {
   cursor: pointer;
-  opacity: .5;
+  opacity: 0.5;
 }
 .testimonial__list .slick-slide img {
   transform: scale(0.9);
@@ -3449,7 +3564,7 @@ button .btn-success{
   color: #333333;
 }
 .news__date {
-  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   font-size: 60px;
   font-weight: 700;
   line-height: 1;
@@ -3849,7 +3964,7 @@ button .btn-success{
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 500;
   border-radius: 4px;
   cursor: pointer;
@@ -3874,10 +3989,10 @@ button .btn-success{
   font-size: 12px;
 }
 .ht-breadcrumbs__item:after {
-  content: '\f105';
+  content: "\f105";
   display: inline-block;
   padding-left: 7px;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
 }
 .ht-breadcrumbs__item:last-child:after {
   display: none;
@@ -3984,7 +4099,7 @@ button .btn-success{
   position: absolute;
   left: 0;
   color: #bbbbbb;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
 }
 .agency__contact-phone:before {
   content: "\f095";
@@ -4663,7 +4778,7 @@ button .btn-success{
 .property__price-primary {
   margin-bottom: 2px;
   color: #1fc341;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 24px;
   font-weight: 700;
 }
@@ -5041,9 +5156,9 @@ button .btn-success{
   border: 1px solid #eeeeee;
   color: #666666;
   background-color: #ededed;
-    padding: 10px;
-    border-radius: 10px;
-    padding-left: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  padding-left: 10px;
 }
 .property__form-field:focus {
   border-color: #1fc341;
@@ -5070,7 +5185,7 @@ button .btn-success{
   text-transform: uppercase;
   border: 0;
   border-radius: 4px;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 500;
   cursor: pointer;
 }
@@ -5120,7 +5235,11 @@ div.similar-home:last-of-type {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-linear-gradient(90deg, #222222 0%, rgba(34, 34, 34, 0) 100%);
+  background: -webkit-linear-gradient(
+    90deg,
+    #222222 0%,
+    rgba(34, 34, 34, 0) 100%
+  );
   background: -moz-linear-gradient(90deg, #222222 0%, rgba(34, 34, 34, 0) 100%);
   background: -o-linear-gradient(90deg, #222222 0%, rgba(34, 34, 34, 0) 100%);
   background: -ms-linear-gradient(90deg, #222222 0%, rgba(34, 34, 34, 0) 100%);
@@ -5206,7 +5325,7 @@ div.similar-home:last-of-type {
 .form-calculator__submit {
   background-color: #1fc341;
   color: #ffffff;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: 500;
   text-transform: uppercase;
@@ -5375,7 +5494,7 @@ div.similar-home:last-of-type {
 .property__placeholder {
   position: relative;
   min-height: 600px;
-  background-image: url('../images/uploads/single_property.jpg');
+  background-image: url("../images/uploads/single_property.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -5449,7 +5568,7 @@ div.similar-home:last-of-type {
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-image: url('../images/uploads/coming_soon.jpg');
+  background-image: url("../images/uploads/coming_soon.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -5563,7 +5682,7 @@ div.similar-home:last-of-type {
 .packages__headline {
   margin-bottom: 45px;
   font-size: 30px;
-  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
   font-weight: 400;
 }
 .package {
@@ -5707,7 +5826,6 @@ div.similar-home:last-of-type {
 }
 @media only screen and (min-width: 992px) {
   .manage-list__item-img {
-    
     margin-right: 30px;
   }
 }
@@ -5726,7 +5844,7 @@ div.similar-home:last-of-type {
 .manage-list__action .remove:hover {
   color: red;
 }
-.remove{
+.remove {
   border: 1px solid black;
   border-radius: 10px;
   background-color: whitesmoke;
@@ -5811,7 +5929,7 @@ div.similar-home:last-of-type {
   border: 1px solid transparent;
   background-color: #1fc341;
   color: #ffffff;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
@@ -5888,8 +6006,8 @@ div.similar-home:last-of-type {
   display: block;
   margin-bottom: 10px;
   color: #333333;
-  font-weight:bold;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
 .my-profile__field {
   margin-bottom: 25px;
@@ -5905,7 +6023,7 @@ div.similar-home:last-of-type {
   color: #ffffff;
   text-align: center;
   cursor: pointer;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
 }
@@ -5918,7 +6036,7 @@ div.similar-home:last-of-type {
   text-align: center;
   border-radius: 3px;
 }
-.my-profile__wrapper input[type=file] {
+.my-profile__wrapper input[type="file"] {
   position: absolute;
   z-index: 2;
   top: 0;
@@ -6014,7 +6132,7 @@ div.similar-home:last-of-type {
   padding-bottom: 15px;
   color: #888888;
 }
-.submit-property__upload input[type=file] {
+.submit-property__upload input[type="file"] {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -6062,7 +6180,7 @@ div.similar-home:last-of-type {
   transform: scale(1.1);
 }
 .sk-folding-cube .sk-cube:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -6157,11 +6275,10 @@ html.hidescrollbar body {
   text-align: center;
 }
 
-
 .go-top {
   margin-right: 1%;
   float: right;
-  background: rgba(255,255,255,.5);
+  background: rgba(255, 255, 255, 0.5);
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -6169,19 +6286,19 @@ html.hidescrollbar body {
 }
 
 .go-top i {
-  color: #2A3542;
+  color: #2a3542;
 }
 
 .site-min-height {
   min-height: 900px;
 }
 
-.img_edit{
+.img_edit {
   filter: brightness(40%);
   transition: 0.3s;
   border-radius: 10px;
 }
-.img_edit:hover{
+.img_edit:hover {
   filter: brightness(100%);
   filter: drop-shadow(3px 8px 9px black);
   transition: 0.3s;
@@ -6194,18 +6311,17 @@ a.btn.btn-success.btn-sm {
   margin-right: 20px;
 }
 
-.feedback-table{
+.feedback-table {
   border: 2px solid #ddd;
-  
 }
-.feedback-table td,th{
+.feedback-table td,
+th {
   padding: 10px;
   text-align: center;
   border: 1px solid lightgray;
-
 }
 
-#btn-checked{
+#btn-checked {
   border: 1px solid black;
   padding-left: 5px;
   padding-right: 10px;
@@ -6213,7 +6329,19 @@ a.btn.btn-success.btn-sm {
   border-radius: 10px;
   color: #050606;
 }
-#btn-checked:hover{
+#btn-checked:hover {
   color: #1fc341;
   background-color: azure;
+}
+#checked_btn {
+  color: black;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-width: 100%;
+  border-radius: 5px;
+  border-color: black;
+  cursor: pointer;
+}
+#checked_btn:hover {
+  color: #1fc341;
 }
